--- a/rechordly_app/wear/src/main/AndroidManifest.xml
+++ b/rechordly_app/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.chrisvle.rechordly" >
+    package="me.chrisvle.rechordly">
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -9,15 +9,49 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.DeviceDefault" >
+        android:theme="@style/AppTheme">
+        <!--android:theme="@android:style/Theme.DeviceDefault">-->
+
         <activity
             android:name=".WatchMain"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".doneActivity"
+            android:label="@string/title_activity_done">
+        </activity>
+        <activity
+            android:name=".cropChooserActivity"
+            android:label="@string/title_activity_crop_chooser">
+        </activity>
+        <activity
+            android:name=".VolumeChooserActivity"
+            android:label="@string/title_activity_volume_chooser">
+        </activity>
+        <activity
+            android:name=".CropActivity"
+            android:label="@string/title_activity_crop">
+        </activity>
+        <activity
+            android:name=".VolumeActivity"
+            android:label="@string/title_activity_volume">
+        </activity>
+        <activity
+            android:name=".SaveRetryActivity"
+            android:label="@string/title_activity_save_retry">
+        </activity>
+        <activity
+            android:name=".EffectsChooserActivity"
+            android:label="@string/title_activity_effects_chooser">
+        </activity>
+        <activity
+            android:name=".EffectsActivity"
+            android:label="@string/title_activity_effects">
         </activity>
     </application>
 
