--- a/rechordly_app/wear/build.gradle
+++ b/rechordly_app/wear/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:1.3.0'
     compile 'com.google.android.gms:play-services-wearable:8.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+
 }
