--- a/rechordly_app/wear/src/main/AndroidManifest.xml
+++ b/rechordly_app/wear/src/main/AndroidManifest.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.chrisvle.rechordly" >
+    package="me.chrisvle.rechordly">
 
     <uses-feature android:name="android.hardware.type.watch" />
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <uses-library
-        android:name="com.google.android.wearable"
-        />
+    <uses-library android:name="com.google.android.wearable" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
         <!-- android:theme="@android:style/Theme.DeviceDefault"> -->
 
         <activity
             android:name=".WatchMain"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,39 +28,31 @@
         </activity>
         <activity
             android:name=".doneActivity"
-            android:label="@string/title_activity_done" >
-        </activity>
+            android:label="@string/title_activity_done" />
         <activity
             android:name=".cropChooserActivity"
-            android:label="@string/title_activity_crop_chooser" >
-        </activity>
+            android:label="@string/title_activity_crop_chooser" />
         <activity
             android:name=".VolumeChooserActivity"
-            android:label="@string/title_activity_volume_chooser" >
-        </activity>
+            android:label="@string/title_activity_volume_chooser" />
         <activity
             android:name=".CropActivity"
-            android:label="@string/title_activity_crop" >
-        </activity>
+            android:label="@string/title_activity_crop" />
         <activity
             android:name=".VolumeActivity"
-            android:label="@string/title_activity_volume" >
-        </activity>
+            android:label="@string/title_activity_volume" />
         <activity
             android:name=".SaveRetryActivity"
-            android:label="@string/title_activity_save_retry" >
-        </activity>
+            android:label="@string/title_activity_save_retry" />
         <activity
             android:name=".EffectsChooserActivity"
-            android:label="@string/title_activity_effects_chooser" >
-        </activity>
+            android:label="@string/title_activity_effects_chooser" />
         <activity
             android:name=".EffectsActivity"
-            android:label="@string/title_activity_effects" >
-        </activity>
+            android:label="@string/title_activity_effects" />
         <activity
             android:name=".RecordActivity"
-            android:label="@string/title_activity_record" >
+            android:label="@string/title_activity_record">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,11 +62,57 @@
 
         <service
             android:name=".MessageService"
-            android:label="Rechordly" >
+            android:label="Rechordly">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".StopActivity"
+            android:label="@string/title_activity_stop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SaveActivity"
+            android:label="@string/title_activity_save">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".PlaybackActivity"
+            android:label="@string/title_activity_playback">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".PauseActivity"
+            android:label="@string/title_activity_pause">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".NameActivity"
+            android:label="@string/title_activity_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
