--- a/rechordly_app/wear/src/main/AndroidManifest.xml
+++ b/rechordly_app/wear/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:name=".doneActivity"
             android:label="@string/title_activity_done" />
         <activity
-            android:name=".cropChooserActivity"
+            android:name=".CropFbActivity"
             android:label="@string/title_activity_crop_chooser" />
         <activity
             android:name=".VolumeChooserActivity"
