added crop screens

--- a/rechordly_app/wear/src/main/AndroidManifest.xml
+++ b/rechordly_app/wear/src/main/AndroidManifest.xml
@@ -5,8 +5,7 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-library android:name="com.google.android.wearable" />
 
@@ -29,8 +28,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
         <activity
             android:name=".doneActivity"
@@ -65,11 +62,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".StopActivity"
-            android:label="@string/title_activity_stop">
-        </activity>
+            android:label="@string/title_activity_stop" />
 
         <service
             android:name=".MessageService"
@@ -81,7 +76,7 @@
 
         <activity
             android:name=".Main2Activity"
-            android:label="@string/title_activity_main2" >
+            android:label="@string/title_activity_main2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -127,6 +122,24 @@
         <activity
             android:name=".ResumeActivity"
             android:label="@string/title_activity_resume">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".CropFrontActivity"
+            android:label="@string/title_activity_main3">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".CropBackActivity"
+            android:label="@string/title_activity_crop_back">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
