clean up files. Allow swiping to the right for playback, when it is playing. In process of making a custom pager

--- a/rechordly_app/wear/src/main/AndroidManifest.xml
+++ b/rechordly_app/wear/src/main/AndroidManifest.xml
@@ -19,17 +19,6 @@
         <!-- android:theme="@android:style/Theme.DeviceDefault"> -->
 
         <activity
-            android:name=".WatchMain"
-            android:label="@string/app_name">
-
-            <!-- removed for debugging purpose -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".doneActivity"
             android:label="@string/title_activity_done" />
         <activity
@@ -51,20 +40,8 @@
             android:name=".EffectsChooserActivity"
             android:label="@string/title_activity_effects_chooser" />
         <activity
-            android:name=".EffectsActivity"
+            android:name=".FilterActivity"
             android:label="@string/title_activity_effects" />
-        <activity
-            android:name=".RecordActivity"
-            android:label="@string/title_activity_record">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".StopActivity"
-            android:label="@string/title_activity_stop" />
 
         <service
             android:name=".MessageService"
@@ -102,26 +79,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PauseActivity"
-            android:label="@string/title_activity_pause">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".NameActivity"
             android:label="@string/title_activity_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".ResumeActivity"
-            android:label="@string/title_activity_resume">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -140,6 +99,15 @@
         <activity
             android:name=".CropBackActivity"
             android:label="@string/title_activity_crop_back">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".EditNavActivity"
+            android:label="@string/title_activity_edit_nav">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
