--- a/rechordly_app/mobile/build.gradle
+++ b/rechordly_app/mobile/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-identity:8.3.0'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile files('libs/commons-math3-3.5.jar')
+    compile 'com.github.DASAR:Minim-Android:a73b596916@aar'
 }
