--- a/rechordly_app/mobile/src/main/AndroidManifest.xml
+++ b/rechordly_app/mobile/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar" >
+        android:theme="@style/AppTheme.NoActionBar"
+        android:largeHeap="true">
         <activity
             android:name=".PhoneMain"
             android:label="@string/app_name"
