--- a/rechordly_app/mobile/src/main/AndroidManifest.xml
+++ b/rechordly_app/mobile/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme.NoActionBar" >
         <activity
             android:name=".PhoneMain"
             android:label="@string/app_name"
