--- a/rechordly_app/mobile/src/main/AndroidManifest.xml
+++ b/rechordly_app/mobile/src/main/AndroidManifest.xml
@@ -53,6 +53,11 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+        <service
+            android:name=".MessageSender"
+            android:enabled="true"
+            android:exported="true">
+        </service>
     </application>
 
 </manifest>
