--- a/rechordly_app/wear/src/main/AndroidManifest.xml
+++ b/rechordly_app/wear/src/main/AndroidManifest.xml
@@ -51,6 +51,14 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".PhoneListener"
+            android:label="Rechordly">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".Main2Activity"
             android:label="@string/title_activity_main2">
