finished effects (hopefully)

--- a/rechordly_app/mobile/src/main/AndroidManifest.xml
+++ b/rechordly_app/mobile/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
             android:enabled="true"
             android:exported="true" />
         <service
+            android:name=".CropService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
             android:name=".EchoService"
             android:enabled="true"
             android:exported="true" />
